--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Mirrored from businessasesores.github.io/page/?language=spanish by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 04 Sep 2022 05:56:35 GMT -->
+<!-- Mirrored from businessasesores.ga/page/?language=spanish by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 04 Sep 2022 05:56:35 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /> <!-- /Added by HTTrack -->
 <head>
     <meta charset="utf-8" />
@@ -86,7 +86,7 @@
 
                    </li>
                     <div class="logo">
-           <a id="logo-header" href="https://www.businessasesores.com.co">
+           <a id="logo-header" href="https://businessasesores.ga">
           <img src="assets/img/pic/g95e8.webp" ;" title="Hosting Dominios | Business asesores"></div>
 
 
@@ -214,7 +214,7 @@
     <section id="home-banner">
         <div class="container text-center">
               <h2>ENCUENTRA TU NOMBRE DE DOMINIO PERFECTO...</h2>
-                     <form method="token" action="https://www.businessasesores.com.co/cart2029.html?a=add&domain=register&query=" id="frmDomainHomepage">
+                     <form method="token" action="https://businessasesores.ga/cart2029.html?a=add&domain=register&query=" id="frmDomainHomepage">
                               <input type="hidden" name="token" value="6f4e0d7a7dba40457efb24f76068b48ff7d35239" />
                     <input type="hidden" name="transfer" />
                     <div class="row">
@@ -428,5 +428,5 @@ This is a sample announcement. Announcements are a great way to keep your
 
 </body>
 
-<!-- Mirrored from businessasesores.com.co/?language=spanish by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 04 Sep 2022 05:56:35 GMT -->
+<!-- Mirrored from businessasesores.ga/?language=spanish by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 04 Sep 2022 05:56:35 GMT -->
 </html>
