--- a/cartreginame.html
+++ b/cartreginame.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Mirrored from www.businessasesores.com.co/web/portal/cart8797.html?a=add&domain=register&language=spanish by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 25 Aug 2022 16:12:00 GMT -->
+<!-- Mirrored from businessasesores.ga/web/portal/cart8797.html?a=add&domain=register&language=spanish by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 25 Aug 2022 16:12:00 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
     <meta charset="UTF-8" />
@@ -71,7 +71,7 @@
                             <span class="icon-bar"></span>
                             </button>
                               <div class="logo">
-                              <a id="logo-header" href="https://www.businessasesores.com.co">
+                              <a id="logo-header" href="https://businessasesores.ga">
                              <img class="small-logo img-responsive" src="https://www.businessasesores.com.co/assets/img/pic/g95e8.webp" alt="logo">
                            </a>
                         </div>
