--- a/cartreginame.html
+++ b/cartreginame.html
@@ -72,7 +72,7 @@
                             </button>
                               <div class="logo">
                               <a id="logo-header" href="https://businessasesores.ga">
-                             <img class="small-logo img-responsive" src="https://www.businessasesores.com.co/assets/img/pic/g95e8.webp" alt="logo">
+                             <img class="small-logo img-responsive" src="assets/img/pic/g95e8.webp" alt="logo">
                            </a>
                         </div>
                     </div>
