--- a/cart2029.html
+++ b/cart2029.html
@@ -78,7 +78,7 @@
 
                    </li>
                     <div class="logo">
-           <a id="logo-header" href="https://www.businessasesores.com.co">
+           <a id="logo-header" href="https://businessasesores.ga">
           <img src="assets/img/pic/g95e8.webp" ;" title="Hosting Dominios | Business asesores"></div>
 
 
