--- a/home-2/index.html
+++ b/home-2/index.html
@@ -560,17 +560,25 @@ With Greate Service
 		</div>
 								</div>
 					</div>
+
+
+
 		</div>
+
+
+
+                             
+
 				<div class="elementor-section elementor-inner-section elementor-element elementor-element-242e3d3 elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="242e3d3" data-element_type="section">
 						<div class="elementor-container elementor-column-gap-default">
 							<div class="elementor-row">
 					<div class="elementor-column elementor-col-100 elementor-inner-column elementor-element elementor-element-32915dd" data-id="32915dd" data-element_type="column">
 			<div class="elementor-column-wrap elementor-element-populated">
 							<div class="elementor-widget-wrap">
-						<div class="elementor-element elementor-element-bac9c23 elementor-widget elementor-widget-domain_check" data-id="bac9c23" data-element_type="widget" data-widget_type="domain_check.default">
+						<div class="elementor-element elementor-element-bac9c23 elementor-widget elementor-widget-domain_check" data-id="bac9c23" data-element_type="widget" data-widget_type="json/chekear-dominio.min.js">
 				<div class="elementor-widget-container">
 			
-			 <div class="pt-domain-check domain-check-2">
+			 <div class="json/chekear-dominio.min.js">
 
         	<div class="pt-domain-form">
 
