--- a/home-2/index.html
+++ b/home-2/index.html
@@ -575,7 +575,7 @@ With Greate Service
 					<div class="elementor-column elementor-col-100 elementor-inner-column elementor-element elementor-element-32915dd" data-id="32915dd" data-element_type="column">
 			<div class="elementor-column-wrap elementor-element-populated">
 							<div class="elementor-widget-wrap">
-						<div class="elementor-element elementor-element-bac9c23 elementor-widget elementor-widget-domain_check" data-id="bac9c23" data-element_type="widget" data-widget_type="json/chekear-dominio.min.js">
+						<div class="elementor-element elementor-element-bac9c23 elementor-widget elementor-widget-domain_check" data-id="bac9c23" data-element_type="widget" data-widget_type="domain_check.default">
 				<div class="elementor-widget-container">
 			
 			 <div class="json/chekear-dominio.min.js">
