--- a/home-2/index.html
+++ b/home-2/index.html
@@ -578,6 +578,17 @@ With Greate Service
 						<div class="elementor-element elementor-element-bac9c23 elementor-widget elementor-widget-domain_check" data-id="bac9c23" data-element_type="widget" data-widget_type="json/chekear-dominio.min.js">
 				<div class="elementor-widget-container">
 			
+                         <div class="pt-domain-check domain-check-2">
+
+        	<div class="pt-domain-form">
+
+        		<div id="wp24-dc-1" class="wp24-dc"></div>	
+
+        	</div>
+
+        	<div class="pt-domain-list">
+
+        		<ul class="pt-domain-text"> 
 			 <div class="pt-domain-check json/chekear-dominio.min.js">
 
         	
