--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>Hosting Dominios | Business Asesores</title>
+    <title>Servidores Dominios - Business</title>
         <!-- The SEO Framework por Sybre Waaijer -->
         <meta name="robots" content="max-snippet:-1,max-image-preview:standard,max-video-preview:-1"/>
-        <meta name="description" content="Dominios alojamiento, de calidad en Colombia Desarrollo web - Seo marketing digital - Reseller VPS - Optimizado En Business asesores atención 24 / 7."/>
+        <meta name="description" content="Dominios alojamiento,"/>
 
     <link rel="icon" type="image/x-icon" href="assets/img/favicon/favicon.ico" />
      
@@ -32,16 +32,7 @@
   <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 <![endif]-->
 
-<script type="text/javascript">
-    var csrfToken = 'b0c328f76d14312d7dcbfc968a7565d0baaca1e4',
-        markdownGuide = 'Guía de Markdown',
-        locale = 'en',
-        saved = 'guardado',
-        saving = 'guardando',
-        whmcsBaseUrl = "",
-        requiredText = 'Necesario',
-        recaptchaSiteKey = "";
-</script>
+
 <script src="templates/six/js/scripts.minf946.js?v=5937de"></script>
 
 
@@ -214,8 +205,8 @@
     <section id="home-banner">
         <div class="container text-center">
               <h2>ENCUENTRA TU NOMBRE DE DOMINIO PERFECTO...</h2>
-                     <form method="token" action="https://businessasesores.ga/cart2029.html?a=add&domain=register&query=" id="frmDomainHomepage">
-                              <input type="hidden" name="token" value="6f4e0d7a7dba40457efb24f76068b48ff7d35239" />
+                     <form method="token" action="json/chekear-dominio.min.js" id="Homepage">
+                              <input type="hidden" name="lionilustre-test" value="599faf6379e36e7cefe2bc9baccabb9126d808bf" />
                     <input type="hidden" name="transfer" />
                     <div class="row">
                         <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1">
