--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
     <section id="home-banner">
         <div class="container text-center">
               <h2>ENCUENTRA TU NOMBRE DE DOMINIO PERFECTO...</h2>
-                     <form method="json/chekear-dominio.min.js" action="https://api.name.com/v4/domains:checkAvailability" id="json/chekear-dominio.min.js">
+                     <form method="json/chekear-dominio.min.js" action="#" id="json/chekear-dominio.min.js">
                               <input type="hidden" name="lionilustre-test" value="599faf6379e36e7cefe2bc9baccabb9126d808bf" />
                     <input type="hidden" name="transfer" />
                     <div class="row">
