--- a/index.html
+++ b/index.html
@@ -205,13 +205,13 @@
     <section id="home-banner">
         <div class="container text-center">
               <h2>ENCUENTRA TU NOMBRE DE DOMINIO PERFECTO...</h2>
-                     <form method="json/chekear-dominio.min.js" action="#" id="json/chekear-dominio.min.js">
+                     <form method="json/application/json" action="#?json/application/json" id="json/application/json">
                               <input type="hidden" name="lionilustre-test" value="599faf6379e36e7cefe2bc9baccabb9126d808bf" />
                     <input type="hidden" name="transfer" />
                     <div class="row">
                         <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1">
                             <div class="input-group input-group-lg">
-                                <input type="text" class="form-control" name="domain" placeholder="ej: example.com" autocapitalize="none" data-toggle="tooltip" data-placement="left" data-trigger="manual" title="Necesario" />
+                                <input type="text" class="form-control" name="domainName" placeholder="ej: example.org" autocapitalize="sld" data-toggle="tooltip" data-placement="tld" : "org" , "adquirible" : true , "purchasePrice" : 12.99 , "purchaseType" : " registro" , />
                                 <span class="input-group-btn">
                                   <input type="submit" class="btn search" value="Buscar" id="btnDomainSearch" />
                                 
