--- a/cart2029.html
+++ b/cart2029.html
@@ -43,7 +43,54 @@
 
 
 
+<section id="header">
+    <div class="container">
+        <ul class="top-nav">
+                            <li>
+                    <a href="#" class="choose-language" data-toggle="popover" id="languageChooser">
+                        Español
+                        <b class="caret"></b>
+                    </a>
+                    <div id="languageChooserContent" class="hidden">
+                        <ul>                                                                              
+                                                            <li>
+                                    <a href="cart812e.html?a=add&amp;domain=register&amp;language=english">English</a>
+                                </li>
+                                                            <li>                                  
+                                    <a href="cart2029.html?a=add&amp;domain=register&amp;language=spanish">Español</a>
+                                </li>                                     
+                                                                       </ul>
+                    </div>
+                </li>
+                                        <li>
+                    <a href="login.html">Acceder <i class="fas fa-user-circle"></i> </a>
 
+                </li>
+                                    <li>
+                        <a href="register.html">Registrarse</a>
+                    </li>
+                                <li class="primary-action">
+                    <a href="cart14c8.html?a=view" class="btn btn-success">
+                        <i class="fas fa-shopping-cart"> </i> 
+                     <strong> Carrito <strong>  </a>                  
+                            </li>
+                              </ul>
+
+                   </li>
+                    <div class="logo">
+           <a id="logo-header" href="https://businessasesores.ga">
+          <img src="assets/img/pic/g95e8.webp" ;" title="Hosting Dominios | Business asesores"></div>
+
+
+</a> 
+
+                       </li>
+
+
+
+
+    </div>
+</section>
 
 <link rel="stylesheet" type="text/css" href="portal/templates/orderforms/standard_cart/css/all.min55d7.css?v=afb1df" />
 <script type="text/javascript" src="templates/orderforms/standard_cart/js/scripts.minf946.js?v=5937de"></script>
