--- a/cart2029.html
+++ b/cart2029.html
@@ -89,13 +89,14 @@
 
 
 
-    </div>
+   </div>
 </section>
 
 <section id="main-menu">
 
     <nav id="nav" class="navbar navbar-default navbar-main" role="navigation">
-        
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
      
     <li menuItemName="Store" class="dropdown" id="Primary_Navbar-Store">
@@ -110,6 +111,7 @@
     </nav>
 
 </section>
+
 
 
 
