--- a/cart2029.html
+++ b/cart2029.html
@@ -118,7 +118,49 @@
             </li>
     <li menuItemName="Store" class="dropdown" id="Primary_Navbar-Store">
         <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                        
+                        Tienda
+                        &nbsp;<b class="caret"></b>        </a>
+                    <ul class="dropdown-menu">
+                            <li menuItemName="Browse Products Services" id="Primary_Navbar-Store-Browse_Products_Services">
+                    <a href="store.html">
+                                                Ver Todos
+                                            </a>
+                </li>
+                            <li menuItemName="Shop Divider 1" class="nav-divider" id="Primary_Navbar-Store-Shop_Divider_1">
+                    <a href="#">
+                                                -----
+                                            </a>
+                </li>
+                            <li menuItemName="Register a New Domain" id="Primary_Navbar-Store-Register_a_New_Domain">
+                    <a href="cart2029.html?a=add&amp;domain=register">
+                                                Registrar Dominios
+                                            </a>
+                </li>
+                            <li menuItemName="Transfer a Domain to Us" id="Primary_Navbar-Store-Transfer_a_Domain_to_Us">
+                    <a href="cart7c76.html?a=add&amp;domain=transfer">
+                                                Transferir Dominios
+                                            </a>
+                </li>
+                        </ul>
+            </li>
+    <li menuItemName="Announcements" class="" id="Primary_Navbar-Announcements">
+        <a href="announcements.html">
+                        Anuncios
+                                </a>
+            </li>
+    <li menuItemName="Knowledgebase" class="" id="Primary_Navbar-Knowledgebase">
+        <a href="knowledgebase.html">
+                        Preguntas Frecuentes - FAQ
+                                </a>
+            </li>
+    <li menuItemName="Network Status" class="" id="Primary_Navbar-Network_Status">
+        <a href="login.html">
+                        Estado de la Red
+                                </a>
+            </li>
+    <li menuItemName="Contact Us" class="" id="Primary_Navbar-Contact_Us">
+        <a href="contact.html">
+                        Contáctenos
                                 </a>
             </li>
 
@@ -127,7 +169,34 @@
                 <ul class="nav navbar-nav navbar-right">
 
                         <li menuItemName="Account" class="dropdown" id="Secondary_Navbar-Account">
-       
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                        Cuenta
+                        &nbsp;<b class="caret"></b>        </a>
+                    <ul class="dropdown-menu">
+                            <li menuItemName="Login" id="Secondary_Navbar-Account-Login">
+                    <a href="login.html">
+                                                Entrar
+                                            </a>
+                </li>
+                            <li menuItemName="Register" id="Secondary_Navbar-Account-Register">
+                    <a href="register.html">
+                                                Registrarse
+                                            </a>
+                </li>
+                            <li menuItemName="Divider" class="nav-divider" id="Secondary_Navbar-Account-Divider">
+                    <a href="#">
+                                                -----
+                                            </a>
+                </li>
+                            <li menuItemName="Forgot Password?" id="Secondary_Navbar-Account-Forgot_Password?">
+                    <a href="password/reset.html">
+                                                ¿Perdiste la contraseña?
+                                            </a>
+                </li>
+                        </ul>
+            </li>
+
+                </ul>
 
             </div><!-- /.navbar-collapse -->
         </div>
