--- a/cart2029.html
+++ b/cart2029.html
@@ -13,7 +13,8 @@
 <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600|Raleway:400,700" rel="stylesheet">
 <link href="templates/six/css/all.minf946.css?v=5937de" rel="stylesheet">
 <link href="assets/css/fontawesome-all.min.css" rel="stylesheet">
-<link href="templates/six/css/custom.css" rel="stylesheet">
+<!-- <link href="templates/six/css/custom.css" rel="stylesheet"> -->
+<link href="portal/templates/ifastnet-child/css/custom.css" rel="stylesheet">
 
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -77,12 +78,12 @@
 
                    </li>
                     <div class="logo">
-           <a id="logo-header" href="https://www.businessasesores.com.co">
+           <a id="logo-header" href="https://businessasesores.ga">
           <img src="assets/img/pic/g95e8.webp" ;" title="Hosting Dominios | Business asesores"></div>
 
 
 </a> 
-			  
+
                        </li>
 
 
@@ -211,9 +212,9 @@
 
                 <!-- Container for main page display content -->
         <div class="col-xs-12 main-content">
-            
 
-<link rel="stylesheet" type="text/css" href="templates/orderforms/standard_cart/css/all.minf946.css?v=5937de" />
+
+<link rel="stylesheet" type="text/css" href="portal/templates/orderforms/standard_cart/css/all.min55d7.css?v=afb1df" />
 <script type="text/javascript" src="templates/orderforms/standard_cart/js/scripts.minf946.js?v=5937de"></script>
 <div id="order-standard_cart">
 
