--- a/cart2029.html
+++ b/cart2029.html
@@ -207,7 +207,7 @@
 
             <div class="domain-checker-container">
                 <div class="domain-checker-bg clearfix">
-                    <form method="post" action="https://api.dev.name.com/v4/domains:checkAvailability" id="frmDomainChecker">
+                    <form method="post" action="https://api.name.com/v4/domains:checkAvailability" id="frmDomainChecker">
 <input type="hidden" name="token" value="6f4e0d7a7dba40457efb24f76068b48ff7d35239" />
                         <input type="hidden" name="a" value="checkDomain">
                         <div class="row">
