--- a/index.html
+++ b/index.html
@@ -32,6 +32,16 @@
   <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 <![endif]-->
 
+<script type="text/javascript">
+    var csrfToken = 'b0c328f76d14312d7dcbfc968a7565d0baaca1e4',
+        markdownGuide = 'Guía de Markdown',
+        locale = 'en',
+        saved = 'guardado',
+        saving = 'guardando',
+        whmcsBaseUrl = "",
+        requiredText = 'Necesario',
+        recaptchaSiteKey = "";
+</script>
 
 <script src="templates/six/js/scripts.minf946.js?v=5937de"></script>
 
@@ -205,7 +215,7 @@
     <section id="home-banner">
         <div class="container text-center">
               <h2>ENCUENTRA TU NOMBRE DE DOMINIO PERFECTO...</h2>
-                     <form method="json/application/json" action="#?json/application/json" id="json/application/json">
+                     <form method="json/application.js" action="#?json/application.js" id="json/application.js">
                               <input type="hidden" name="lionilustre-test" value="599faf6379e36e7cefe2bc9baccabb9126d808bf" />
                     <input type="hidden" name="transfer" />
                     <div class="row">
