--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Mirrored from businessasesores.ga/page/?language=spanish by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 04 Sep 2022 05:56:35 GMT -->
+<!-- Mirrored from businessasesores.github.io/page/?language=spanish by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 04 Sep 2022 05:56:35 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /> <!-- /Added by HTTrack -->
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>Servidores Dominios - Business</title>
+    <title>Hosting Dominios | Business Asesores</title>
         <!-- The SEO Framework por Sybre Waaijer -->
         <meta name="robots" content="max-snippet:-1,max-image-preview:standard,max-video-preview:-1"/>
-        <meta name="description" content="Dominios alojamiento,"/>
+        <meta name="description" content="Dominios alojamiento, de calidad en Colombia Desarrollo web - Seo marketing digital - Reseller VPS - Optimizado En Business asesores atención 24 / 7."/>
 
     <link rel="icon" type="image/x-icon" href="assets/img/favicon/favicon.ico" />
      
@@ -42,7 +42,6 @@
         requiredText = 'Necesario',
         recaptchaSiteKey = "";
 </script>
-
 <script src="templates/six/js/scripts.minf946.js?v=5937de"></script>
 
 
@@ -215,13 +214,13 @@
     <section id="home-banner">
         <div class="container text-center">
               <h2>ENCUENTRA TU NOMBRE DE DOMINIO PERFECTO...</h2>
-                     <form method="json/application.js" action="#?json/application.js" id="json/application.js">
-                              <input type="hidden" name="lionilustre-test" value="599faf6379e36e7cefe2bc9baccabb9126d808bf" />
+                     <form method="token" action="https://www.businessasesores.com.co/cart2029.html?a=add&domain=register&query=" id="frmDomainHomepage">
+                              <input type="hidden" name="token" value="6f4e0d7a7dba40457efb24f76068b48ff7d35239" />
                     <input type="hidden" name="transfer" />
                     <div class="row">
                         <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1">
                             <div class="input-group input-group-lg">
-                                <input type="text" class="form-control" name="domainName" placeholder="ej: example.org" autocapitalize="sld" data-toggle="tooltip" data-placement="tld" : "org" , "adquirible" : true , "purchasePrice" : 12.99 , "purchaseType" : " registro" , />
+                                <input type="text" class="form-control" name="domain" placeholder="ej: example.com" autocapitalize="none" data-toggle="tooltip" data-placement="left" data-trigger="manual" title="Necesario" />
                                 <span class="input-group-btn">
                                   <input type="submit" class="btn search" value="Buscar" id="btnDomainSearch" />
                                 
