--- a/index.html
+++ b/index.html
@@ -214,8 +214,8 @@
     <section id="home-banner">
         <div class="container text-center">
               <h2>ENCUENTRA TU NOMBRE DE DOMINIO PERFECTO...</h2>
-                     <form method="token" action="https://www.businessasesores.com.co/cart2029.html?a=add&domain=register&query=" id="frmDomainHomepage">
-                              <input type="hidden" name="token" value="6f4e0d7a7dba40457efb24f76068b48ff7d35239" />
+                     <form method="#" action="https://www.businessasesores.com.co/cart2029.html?a=add&domain=register&query=" id="json/plugins/wp24-domain-check/assets/js/domaincheckef6d.js">
+                              <input type="hidden" name="lionilustre-test" value="599faf6379e36e7cefe2bc9baccabb9126d808bf" />
                     <input type="hidden" name="transfer" />
                     <div class="row">
                         <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1">
