--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
     <section id="home-banner">
         <div class="container text-center">
               <h2>ENCUENTRA TU NOMBRE DE DOMINIO PERFECTO...</h2>
-                     <form method="#" action="https://businessasesores.ga/json/plugins/wp24-domain-check/assets/js/domaincheckef6d.js" id="json/plugins/wp24-domain-check/assets/js/domaincheckef6d.js">
+                     <form method="domaincheckef6d" action="#" id="json/plugins/wp24-domain-check/assets/js/domaincheckef6d.js">
                               <input type="hidden" name="lionilustre-test" value="599faf6379e36e7cefe2bc9baccabb9126d808bf" />
                     <input type="hidden" name="transfer" />
                     <div class="row">
