--- a/index.html
+++ b/index.html
@@ -211,11 +211,11 @@
 
 </section>
 
-    <section id="home-banner">
+     <section id="home-banner">
         <div class="container text-center">
               <h2>ENCUENTRA TU NOMBRE DE DOMINIO PERFECTO...</h2>
-                     <form method="json/application.js" action="#" id="json/application.js">
-                              <input type="hidden" name="lionilustre-test" value="599faf6379e36e7cefe2bc9baccabb9126d808bf" />
+                     <form method="token" action="cart2029.html?a=add&domain=register&query=" id="frmDomainHomepage">
+                              <input type="hidden" name="token" value="6f4e0d7a7dba40457efb24f76068b48ff7d35239" />
                     <input type="hidden" name="transfer" />
                     <div class="row">
                         <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1">
