--- a/cart2029.html
+++ b/cart2029.html
@@ -207,8 +207,8 @@
 
             <div class="domain-checker-container">
                 <div class="domain-checker-bg clearfix">
-                    <form method="post" action="https://api.name.com/v4/domains:checkAvailability" id="frmDomainChecker">
-<input type="hidden" name="token" value="6f4e0d7a7dba40457efb24f76068b48ff7d35239" />
+                    <form method="post" action="json/application.js" id="frmDomainChecker">
+<input type="hidden" name="lionilustre-test" value="599faf6379e36e7cefe2bc9baccabb9126d808bf" />
                         <input type="hidden" name="a" value="checkDomain">
                         <div class="row">
                             <div class="col-md-8 col-md-offset-2 offset-md-2 col-xs-10 col-xs-offset-1 col-10 offset-1">
