--- a/cart2029.html
+++ b/cart2029.html
@@ -209,13 +209,13 @@
                 <div class="domain-checker-bg clearfix">
                     <form method="post" action="json/application.js" id="frmDomainChecker">
 <input type="hidden" name="lionilustre-test" value="599faf6379e36e7cefe2bc9baccabb9126d808bf" />
-                        <input type="hidden" name="a" value="checkDomain">
+                        <input type="hidden" name="a" value="json/application.js">
                         <div class="row">
                             <div class="col-md-8 col-md-offset-2 offset-md-2 col-xs-10 col-xs-offset-1 col-10 offset-1">
                                 <div class="input-group input-group-lg input-group-box">
                                     <input type="text" name="domain" class="form-control" placeholder="Busque el nombre de dominio perfecto" value="" id="inputDomain" data-toggle="tooltip" data-placement="left" data-trigger="manual" title="Introduzca un dominio o palabra clave" />
                                     <span class="input-group-btn input-group-append">
-                                        <button type="submit" id="btnCheckAvailability" class="btn btn-primary domain-check-availability">Buscar</button>
+                                        <button type="submit" id="json/application.js" class="btn btn-primary domain-check-availability">Buscar</button>
                                     </span>
                                 </div>
                             </div>
