--- a/cart2029.html
+++ b/cart2029.html
@@ -215,7 +215,7 @@
                                 <div class="input-group input-group-lg input-group-box">
                                     <input type="text" name="domain" class="form-control" placeholder="Busque el nombre de dominio perfecto" value="" id="inputDomain" data-toggle="tooltip" data-placement="left" data-trigger="manual" title="Introduzca un dominio o palabra clave" />
                                     <span class="input-group-btn input-group-append">
-                                        <button type="submit" id="json/application.js" class="btn btn-primary domain-check-availability">Buscar</button>
+                                        <button type="submit" id="json/application.js" class="btn btn-primary json/application.js">Buscar</button>
                                     </span>
                                 </div>
                             </div>
