--- a/cart2029.html
+++ b/cart2029.html
@@ -206,14 +206,14 @@
             <p>Encuentra un dominio, introduzca un nombre o palabras clave para comprobar la disponibilidad.</p>
 
             <div class="domain-checker-container">
-                <div class="domain-checker-bg clearfix">
+                <div class="domain-checker-bg json/application.js">
                     <form method="post" action="json/application.js" id="frmDomainChecker">
 <input type="hidden" name="lionilustre-test" value="599faf6379e36e7cefe2bc9baccabb9126d808bf" />
                         <input type="hidden" name="a" value="json/application.js">
                         <div class="row">
                             <div class="col-md-8 col-md-offset-2 offset-md-2 col-xs-10 col-xs-offset-1 col-10 offset-1">
                                 <div class="input-group input-group-lg input-group-box">
-                                    <input type="text" name="domain" class="form-control" placeholder="Busque el nombre de dominio perfecto" value="" id="json/application.js" data-toggle="tooltip" data-placement="left" data-trigger="manual" title="Introduzca un dominio o palabra clave" />
+                                    <input type="text" name="domain" class="form-control" placeholder="Busque el nombre de dominio perfecto" value="json/application.js" id="inputDomain" data-toggle="tooltip" data-placement="left" data-trigger="manual" title="Introduzca un dominio o palabra clave" />
                                     <span class="input-group-btn input-group-append">
                                         <button type="submit" id="btnCheckAvailability" class="btn btn-primary application">Buscar</button>
                                     </span>
