--- a/cart2029.html
+++ b/cart2029.html
@@ -213,8 +213,8 @@
                         <div class="row">
                             <div class="col-md-8 col-md-offset-2 offset-md-2 col-xs-10 col-xs-offset-1 col-10 offset-1">
                                 <div class="input-group input-group-lg input-group-box">
-                                    <input type="text" name="domain" class="form-control" placeholder="Busque el nombre de dominio perfecto" value="json/application.js" id="inputDomain" data-toggle="tooltip" data-placement="left" data-trigger="manual" title="Introduzca un dominio o palabra clave" />
-                                    <span class="input-group-btn input-group-append">
+                                    <input type="text" name="domain" class="form-control" placeholder="Busque el nombre de dominio perfecto" value="" id="inputDomain" data-toggle="tooltip" data-placement="left" data-trigger="manual" title="Introduzca un dominio o palabra clave" />
+                                    <span class="input-group-btn json/application.js">
                                         <button type="submit" id="btnCheckAvailability" class="btn btn-primary application">Buscar</button>
                                     </span>
                                 </div>
