--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
      
     <!-- Styling -->
  <!-- <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600|Raleway:400,700" rel="stylesheet"> --> 
-<link rel="canonical" href="https://www.businessasesores.com.co" />
+<link rel="canonical" href="https://businessasesores.ga" />
 <link href="templates/six/css/all.minf946.css?v=5937de" rel="stylesheet">
 <link href="assets/css/fontawesome-all.min.css" rel="stylesheet">
 <link href="templates/six/css/custom.css" rel="stylesheet">
