--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Hosting Dominios | Business Asesores</title>
         <!-- The SEO Framework por Sybre Waaijer -->
         <meta name="robots" content="max-snippet:-1,max-image-preview:standard,max-video-preview:-1"/>
-        <meta name="description" content="Dominios alojamiento, de calidad en Colombia Desarrollo web - Seo marketing digital - Reseller VPS - Optimizado En Business asesores atención 24 / 7."/>
+        <meta name="description" content="Seo marketing digital - Business asesores atención 24 / 7."/>
 
     <link rel="icon" type="image/x-icon" href="assets/img/favicon/favicon.ico" />
      
