--- a/cartreginame.html
+++ b/cartreginame.html
@@ -1035,12 +1035,10 @@ jQuery(document).ready(function() {
 
 
 
-    <!--Start Cookie Script-->
-    <script type="text/javascript" charset="UTF-8" src="//cdn.cookie-script.com/s/1fbeb4cd8d5043d0fb7f2bc0d80b8957.js"></script>
-    <!--End Cookie Script-->
+    
 
 
 </body>
 
-<!-- Mirrored from www.businessasesores.com.co/web/portal/cart8797.html?a=add&domain=register&language=spanish by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 25 Aug 2022 16:12:03 GMT -->
+<!-- Mirrored from businessasesores.ga/web/portal/cart8797.html?a=add&domain=register&language=spanish by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 25 Aug 2022 16:12:03 GMT -->
 </html>
