--- a/portal/cart8797.html
+++ b/portal/cart8797.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Mirrored from www.businessasesores.com.co/web/portal/cart8797.html?a=add&domain=register&language=spanish by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 25 Aug 2022 16:12:00 GMT -->
+<!-- Mirrored from businessasesores.ga/web/portal/cart8797.html?a=add&domain=register&language=spanish by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 25 Aug 2022 16:12:00 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
     <meta charset="UTF-8" />
@@ -993,5 +993,5 @@ jQuery(document).ready(function() {
 
 </body>
 
-<!-- Mirrored from www.businessasesores.com.co/web/portal/cart8797.html?a=add&domain=register&language=spanish by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 25 Aug 2022 16:12:03 GMT -->
+<!-- Mirrored from businessasesores.ga/web/portal/cart8797.html?a=add&domain=register&language=spanish by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 25 Aug 2022 16:12:03 GMT -->
 </html>
